# consumption-tax-sim

./: README.md  pyproject.toml
notebooks/: analysis.ipynb
src/consumption_tax_sim/: __init__.py
